namespace java com.rpc.thrift.api
service HelloService{
    string hello(1:string name)
}