namespace java com.rpc.dubbo.api
 service ThriftApiProvider{
     string hello(1:string name)
 }